RESOLVED FIXED164587
[WebRTC][OpenWebRTC] parse turns urls
https://bugs.webkit.org/show_bug.cgi?id=164587
Summary [WebRTC][OpenWebRTC] parse turns urls
Philippe Normand
Reported 2016-11-10 04:12:24 PST
Since bug 164506 was fixed the end-point should now parse turns urls and pass them on to openwebrtc.
Attachments
patch (2.87 KB, patch)
2016-11-16 07:41 PST, Philippe Normand
no flags
patch (2.80 KB, patch)
2016-11-16 07:54 PST, Philippe Normand
alex: review+
Philippe Normand
Comment 1 2016-11-16 07:39:34 PST
Philippe Normand
Comment 2 2016-11-16 07:41:41 PST
WebKit Commit Bot
Comment 3 2016-11-16 07:42:58 PST
Attachment 294938 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/openwebrtc/MediaEndpointOwr.cpp:586: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/mediastream/openwebrtc/MediaEndpointOwr.cpp:587: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 4 2016-11-16 07:54:31 PST
Alejandro G. Castro
Comment 5 2016-11-17 04:20:40 PST
Comment on attachment 294940 [details] patch Why do we have the style issues?
Philippe Normand
Comment 6 2016-11-17 05:10:35 PST
Which style issues? :) They've been fixed in the patch you reviewed.
Philippe Normand
Comment 7 2016-11-21 01:41:56 PST
Note You need to log in before you can comment on or make changes to this bug.